# segmentation-itk

./: .gitignore  CMakeLists.txt  KMeans.cxx  OtsuThresholding.cxx  OtsuThresholding.sh  README.md
